      longer ignores unknown **keyword arguments.

    - Fixed a bug with the unitofwork's "row switch" mechanism,
      i.e. the conversion of INSERT/DELETE into an UPDATE, when
      combined with joined-table inheritance and an object
      which contained no defined values for the child table where
      an UPDATE with no SET clause would be rendered.
      
- schema
    - Index now accepts column-oriented InstrumentedAttributes
      (i.e. column-based mapped class attributes) as column
      arguments. [ticket:1214]

    - Column with no name (as in declarative) won't raise a 
      NoneType error when it's string output is requsted
      (such as in a stack trace).
      
- declarative
    - Can now specify Column objects on subclasses which have no
      table of their own (i.e. use single table inheritance).  
      The columns will be appended to the base table, but only
      mapped by the subclass.

    - For both joined and single inheriting subclasses, the subclass
      will only map those columns which are already mapped on the 
      superclass and those explicit on the subclass.  Other 
      columns that are present on the `Table` will be excluded
      from the mapping by default, which can be disabled
      by passing a blank `exclude_properties` collection to the
      `__mapper_args__`.  This is so that single-inheriting
      classes which define their own columns are the only classes
      to map those columns.   The effect is actually a more organized
      mapping than you'd normally get with explicit `mapper()`
      calls unless you set up the `exclude_properties` arguments
      explicitly.

    - It's an error to add new Column objects to a declarative class
      that specified an existing table using __table__.
      
- mysql
    - Added the missing keywords from MySQL 4.1 so they get escaped
      properly.

- mssql
    - Modified the do_begin handling in mssql to use the Cursor not
      the Connection so it is DBAPI compatible.
